# tasky

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  VISION.md  pyproject.toml  pyrightconfig.json  ruff.toml
.claude/commands/openspec/: review.md
.github/prompts/: architecture-audit.prompt.md
docs/: IMPLEMENTATION_ROADMAP.md  architecture.md  cli-structure.md  core-architecture.md  project-structure.md  settings-architecture.md
docs/architecture/adr/: 0000-template.md  0001-backend-registry-pattern.md  0002-error-handling-strategy.md  0003-configuration-hierarchy.md  0004-project-registry-storage.md  README.md
examples/: global-config.toml  project-config.toml
openspec/changes/add-advanced-backends/: proposal.md  tasks.md
openspec/changes/add-advanced-filtering/: tasks.md
openspec/changes/add-automatic-timestamps/: tasks.md
openspec/changes/add-cli-input-validators/: tasks.md
openspec/changes/add-configurable-storage-backends/: proposal.md  tasks.md
openspec/changes/add-coverage-reporting/: proposal.md  tasks.md
openspec/changes/add-domain-exception-hierarchy/: tasks.md
openspec/changes/add-hierarchical-configuration/: proposal.md  tasks.md
openspec/changes/add-mcp-server/: proposal.md  tasks.md
openspec/changes/add-pluggable-logging/: tasks.md
openspec/changes/add-project-registry/: tasks.md
openspec/changes/add-sqlite-backend/: proposal.md  tasks.md
openspec/changes/add-task-create-command/: tasks.md
openspec/changes/add-task-filtering/: proposal.md  tasks.md
openspec/changes/add-task-import-export/: tasks.md
openspec/changes/add-task-show-command/: proposal.md  tasks.md
openspec/changes/add-task-state-transitions/: proposal.md  tasks.md
openspec/specs/task-storage/: spec.md
src/tasky/: __init__.py
(+199 files in other folders)
