[project]
name = "tasky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alexis Beaulieu", email = "alexisbeaulieu97@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["tasky-cli"]

[project.scripts]
tasky = "tasky:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
tasky-cli = { workspace = true }

[dependency-groups]
dev = ["pytest>=9.0.0", "ruff>=0.14.4"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
