[project]
name = "tasky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alexis Beaulieu", email = "alexisbeaulieu97@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["tasky-cli"]

[project.scripts]
tasky = "tasky:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
tasky-cli = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.4",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.coverage.run]
branch = true
source = ["packages"]
omit = ["*/tests/*", "*/test_*.py", "*/__init__.py", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"
